# amenitiz-takehome

./: .coverage  .cursorrules  .gitignore  ANALYSIS_NARRATIVE.md  ANALYSIS_NARRATIVE_BACKUP.md  ANALYSIS_NARRATIVE_FINAL.md  ANALYSIS_NARRATIVE_README.md  ANALYSIS_NARRATIVE_REVISED.md  README.md  REFACTORING_SUMMARY.md  REPRODUCIBILITY.md  RESTRUCTURE_SUMMARY.md  STRUCTURE.md  TESTING_SUMMARY.md  gshhg.txt  guidelines.md  jon_summary.md  nov24_summary.md  pyproject.toml  pyproject.toml.backup  pytest.ini  run_all_output.txt  run_all_scripts.sh  section_1_3_daily_price.py  section_2_1_room_features.py  section_2_2_capacity_policies.py  section_3_1_location_analysis.py  tree.txt  updated_section_1_2_hotel_level.py
.cursor/plans/: competitor-occupancy-feature-917fff02.plan.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: default.yaml
data/: ds_hotel_location.csv  ds_rooms.csv  sample.csv
docs/: background.md  model_specification.md
docs/reports/: EXECUTIVE_SUMMARY_FINAL.md  FEATURE_IMPORTANCE_SUMMARY.md  MATCHED_PAIRS_VALIDATED_SUMMARY.md  PRICING_ANALYSIS_INSIGHTS.md  README.md  STRATEGIC_PRESENTATION_FRAMEWORK.md  sections_5_6_summary.md  (+1 more)
entrypoint/: recommend.py  train.py
lib/: DATA_VALIDATOR_REFACTOR.md  README.md  README_interactive_heatmap.md  cache_utils.py  data_validator.py  data_validator.py.bak  db.py  eda_utils.py  holiday_features.py  interactive_heatmap.py  sql_loader.py
ml_pipeline/: NEXT_STEPS_COMPETITOR_OCCUPANCY.md  analyze_mape_by_segment.py  cluster_models.py  competitor_features.py  config.py  daily_pricing.py  ensemble_pricing.py  evaluate.py  features.py  knn_pricing.py  main.py  mape_optimization.py  model_comparison.py  predict.py  preprocessing.py  relative_pricing.py  train.py  two_stage_model.py
notebooks/: explore_sample.py  interactive_heatmap_demo.ipynb  model_documentation.ipynb
outputs/: booking_heatmap.html  test_heatmap.html  test_heatmap_fixed.html  test_heatmap_new_layout.html
scripts/: generate_readme_visualizations.py  verify_pipeline.py
src/: __init__.py
tests/: README.md  conftest.py  test_cleaning_rules.py  test_data_validator.py  test_db.py  test_diagnosis.py  test_integration.py  test_phase1_validation.py  test_phase2_revpar.py  test_phase3_triangulated.py  test_pipeline.py
visualization/: plots.py
(+230 files in other folders)
