[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = "End-to-end ML Pipeline Implementation"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
numpy = "^1.24.0"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true