[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = "End-to-end ML Pipeline Implementation"
authors = ["Jon Robbins <jrrobbins@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ml_pipeline" },
    { include = "visualization" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.13.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
jupyter = "^1.0.0"
duckdb = "^1.4.2"
notebook = "^7.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true