[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = "End-to-end ML Pipeline Implementation"
authors = ["Jon Robbins <jrrobbins@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ml_pipeline" },
    { include = "visualization" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.13.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
jupyter = "^1.0.0"
duckdb = "^1.4.2"
notebook = "^7.5.0"
geopandas = "^1.1.1"
shapely = "^2.1.2"
geopy = "^2.4.1"
folium = "^0.20.0"
h3 = "^4.3.1"
branca = "^0.8.2"
wget = "^3.2"
prophet = "^1.1.5"
xgboost = "^3.0.0"
lightgbm = "^4.0.0"
shap = "^0.50.0"
scipy = "^1.11.0"
catboost = "^1.2.8"
holidays = "^0.63"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^23.0.0"
flake8 = "^6.0.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
